--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -9,6 +9,8 @@ jobs:
       - run: node --version
       - run: npm --version
       - run: npm install
+      - name: run a one line scripte
+        run: echo Hello, Ofir!
 # # This is a basic workflow to help you get started with Actions
 
 # name: Test Node with workflow
