--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -13,6 +13,7 @@ jobs:
       - run: npm install
       - name: run a one line scripte
         run: echo Hello, Ofir!
+      - run: node index.js
 # # This is a basic workflow to help you get started with Actions
 
 # name: Test Node with workflow
